--- a/jenkinsFile
+++ b/jenkinsFile
@@ -7,10 +7,18 @@ pipeline {
     }
 
     stages {
+    stage('Checkout from GitHub'){
+    steps{
+     // Get some code from a GitHub repository
+        git branch: 'master',
+        credentialsId: 'GustavoQA',
+        url: 'https://github.com/GustavoQA/restAssuredToken.git'
+         }
+    }
         stage(' Fase integracion construcion del script ') {
             steps {
                 // Get some code from a GitHub repository
-                git 'https://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@github.com/GustavoQA/restAssuredToken.git'
+                //git 'https://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@github.com/GustavoQA/restAssuredToken.git'
 
                 // Run Maven on a Unix agent.
                 //sh "mvn -Dmaven.test.failure.ignore=true clean package"
