--- a/jenkinsFile
+++ b/jenkinsFile
@@ -43,7 +43,7 @@ pipeline {
                         cucumber buildStatus: "UNSTABLE",
                                 fileIncludePattern: '**/cucumber.json',
                                 jsonReportDirectory: 'target',
-                                plugin:'PrettyReport'
+                                plugin:'JsonReport'
                     }
 
                     post {
