--- a/jenkinsFile
+++ b/jenkinsFile
@@ -14,6 +14,8 @@ pipeline {
         stage('Checkout from GitHub'){
         steps{
 
+        checkout scm
+
      // Get some code from a GitHub repository
        // git branch: 'master',
        // credentialsId: 'GustavoQA',
