--- a/jenkinsFile
+++ b/jenkinsFile
@@ -1,5 +1,8 @@
 pipeline {
-    agent any
+    agent {
+       node{ 'nodos'
+       }  
+    }
 
     tools {
         // Install the Maven version configured as "M3" and add it to the path.
