--- a/jenkinsFile
+++ b/jenkinsFile
@@ -5,10 +5,10 @@ pipeline {
        }  
     }
 
-    tools {
+   // tools {
         // Install the Maven version configured as "M3" and add it to the path.
-        maven "maven_3.8.5"
-    }
+     //   maven "maven_3.8.5"
+   // }
 
     stages {
     stage('Checkout from GitHub'){
